--- a/esercizio-7/src/app/card/card.component.html
+++ b/esercizio-7/src/app/card/card.component.html
@@ -1,12 +1,12 @@
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
 <h1 align="center">Pokémon Nero e Bianco</h1>
-<img src="https://i.pinimg.com/originals/d1/b1/1d/d1b11d5e4dbae547ac0d651476cec488.png" style="width: 100px; margin-left: auto; margin-right: auto; border-radius: 20px;">
+<img src="https://media.pokemoncentral.it/wiki/3/31/Pok%C3%A9mon_Serie_Nero_e_Bianco_logo.png" style="width: 100px; margin-left: auto; margin-right: auto;">
 <br>
-<h3 class="container">La città principale è Austropoli: questa è caratterizzata da molti edifici e grattacieli, tutti esplorabili dal giocatore. Al di fuori di Austropoli, Unima resta comunque prevalentemente industrializzata con la presenza di varie fabbriche e ferrovie in diversi settori.</h3>
+<h3 class="container" align="center">La città principale è Austropoli: questa è caratterizzata da molti edifici e grattacieli, tutti esplorabili dal giocatore. Al di fuori di Austropoli, Unima resta comunque prevalentemente industrializzata con la presenza di varie fabbriche e ferrovie in diversi settori.</h3>
 
-<div class="card" style="width:400px" *ngfor="let element.">
-  <img class="card-img-top" src="img_avatar1.png" alt="Card image">
+<div class="card" style="width:400px" *ngFor="let element of pokemon">
+  <img class="card-img-top" src="{{element.immagine}}" alt="Card image">
   <div class="card-body">
     <h4 class="card-title">tepig</h4>
     <p class="card-text"></p>
