--- a/esercizio-7/src/app/card/card.component.css
+++ b/esercizio-7/src/app/card/card.component.css
@@ -1,22 +1,3 @@
-.top{
-    background-color: blueviolet;
-}
-
-.jungle{
-    background-color: aquamarine;
-}
-
-.mid{
-    background-color: brown;
-}
-
-.adc{
-background-color: red;
-}
-
-.support{
-    background-color: orange;
-}
 
 .badge{
     background-color: white;
@@ -24,4 +5,8 @@ background-color: red;
     padding: 4px 8px;
     text-align: center;
     border-radius: 5px;
+  }
+
+  .style{
+    background-image: url(../../assets/pokemon\ bianco\ e\ nero.webp);
   }
