aggiunta immagine aggiusto bottoni

--- a/esercizio-7/src/app/card/card.component.html
+++ b/esercizio-7/src/app/card/card.component.html
@@ -1,6 +1,6 @@
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
-<h1 align="center">Pokémon Nero e Bianco</h1>
+<h1 align="center" style="background-color: white;">Pokémon Nero e Bianco</h1>
 <img src="https://media.pokemoncentral.it/wiki/3/31/Pok%C3%A9mon_Serie_Nero_e_Bianco_logo.png" style="width: 100px; margin-left: auto; margin-right: auto;">
 <br>
 <h3 class="container" align="center">La città principale è Austropoli: questa è caratterizzata da molti edifici e grattacieli, tutti esplorabili dal giocatore. Al di fuori di Austropoli, Unima resta comunque prevalentemente industrializzata con la presenza di varie fabbriche e ferrovie in diversi settori.</h3>
@@ -11,7 +11,7 @@
     <img class="card-img-top" src="{{element.immagine}}" alt="Card image">
     <div class="card-body">
       <h4 class="card-title" align="center">{{element.nome}}</h4>
-      <a href="#" class="btn btn-primary">più informazioni</a>
+      <a href="#" class="btn btn-primary" style="width:200px; margin-left: 20%; margin-right: 20%;">più informazioni</a>
     </div>
   </div>
 </div>
