--- a/esercizio-7/src/app/card/card.component.html
+++ b/esercizio-7/src/app/card/card.component.html
@@ -1,19 +1,92 @@
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
-<h1 align="center" style="background-color: white;">Pokémon Nero e Bianco</h1>
+<div class="bg-warning">
+<h1 align="center" >Pokémon Nero e Bianco</h1>
 <img src="https://media.pokemoncentral.it/wiki/3/31/Pok%C3%A9mon_Serie_Nero_e_Bianco_logo.png" style="width: 100px; margin-left: auto; margin-right: auto;">
 <br>
-<h3 class="container" align="center">La città principale è Austropoli: questa è caratterizzata da molti edifici e grattacieli, tutti esplorabili dal giocatore. Al di fuori di Austropoli, Unima resta comunque prevalentemente industrializzata con la presenza di varie fabbriche e ferrovie in diversi settori.</h3>
-<div class="container">
-<div class="row">
-  <div class="col-md-4" style="width:400px; margin-left: auto; margin-right: auto;"  *ngFor="let element of pokemon">
-  <div class="card mb-4" >
-    <img class="card-img-top" src="{{element.immagine}}" alt="Card image">
-    <div class="card-body">
-      <h4 class="card-title" align="center">{{element.nome}}</h4>
-      <a href="#" class="btn btn-primary" style="width:200px; margin-left: 20%; margin-right: 20%;">più informazioni</a>
+</div>
+<div *ngIf="!(pokemon[0].control || pokemon[1].control || pokemon[2].control); then thenBlock1; else elseBlock"></div>
+
+<ng-template #thenBlock1>
+  <h3 class="container" align="center">La città principale è Austropoli: questa è caratterizzata da molti edifici e grattacieli, tutti esplorabili dal giocatore. Al di fuori di Austropoli, Unima resta comunque prevalentemente industrializzata con la presenza di varie fabbriche e ferrovie in diversi settori.</h3>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4" style="width:400px; margin-left: auto; margin-right: auto;"  *ngFor="let element of pokemon">
+      <div class="card mb-4" >
+        <img class="card-img-top" src="{{element.immagine}}" alt="Card image">
+        <div class="card-body">
+          <h4 class="card-title" align="center">{{element.nome}}</h4>
+          <a href="#" class="btn btn-primary" (click)="bottone(element)" style="width:200px; margin-left: 20%; margin-right: 20%;">più informazioni</a>
+        </div>
+      </div>
+    </div>
+    </div>
+    </div>
+</ng-template>
+
+<ng-template #elseBlock>
+  <div *ngIf="pokemon[0].control; then thenBlock2; else elseBlock2"></div>
+
+  <ng-template #thenBlock2>
+    <div class="background">
+    <div class="container" style="width:400px;">
+      <div class="card mb-5"  >
+        <img class="card-img-top" src="{{pokemon[0].immagine}}" alt="Card image">
+        <div class="card-body">
+          <h4 class="card-title" align="center">{{pokemon[0].nome}}</h4>
+          <p class="card-text "><strong>DOVE TROVARLO :</strong>{{pokemon[0].zona}}</p>
+          <p class="card-text"><strong>TIPOLOGIA :</strong>{{pokemon[0].tipo}}</p>
+          <p class="card-text"><strong>PRIMA ABILITÀ :</strong>{{pokemon[0].primaabilita}}</p>
+          <p class="card-text"><strong>ABILITÀ SPECIALE :</strong>{{pokemon[0].abilitaspeciale}}</p>
+          <p class="card-text"><strong>DEBOLEZZE :</strong>{{pokemon[0]. debolezze}}</p>
+        </div>
+    </div>
     </div>
   </div>
-</div>
-</div>
-</div>
+    <br>
+    <br>
+  </ng-template>
+
+  <ng-template #elseBlock2>
+    <div *ngIf="pokemon[1].control; then thenBlock3; else elseBlock3"></div>
+
+    <ng-template #thenBlock3>
+      <div class="container" style="width:400px;">
+        <div class="card mb-5"  >
+          <img class="card-img-top" src="{{pokemon[1].immagine}}" alt="Card image">
+          <div class="card-body">
+            <h4 class="card-title" align="center">{{pokemon[1].nome}}</h4>
+            <p class="card-text "><strong>DOVE TROVARLO :</strong>{{pokemon[1].zona}}</p>
+          <p class="card-text"><strong>TIPOLOGIA :</strong>{{pokemon[1].tipo}}</p>
+          <p class="card-text"><strong>PRIMA ABILITÀ:</strong>{{pokemon[0].primaabilita}}</p>
+          <p class="card-text"><strong>ABILITÀ SPECIALE :</strong>{{pokemon[1].abilitaspeciale}}</p>
+          <p class="card-text"><strong>DEBOLEZZE :</strong>{{pokemon[1]. debolezze}}</p>
+          </div>
+      </div>
+      </div>
+      <br>
+    <br>
+    </ng-template>
+
+    <ng-template #elseBlock3>
+      <div *ngIf="pokemon[2].control;then thenBlock4"></div>
+      <ng-template #thenBlock4>
+        <div class="container" style="width:400px;">
+          <div class="card mb-5"  >
+            <img class="card-img-top" src="{{pokemon[2].immagine}}" alt="Card image">
+            <div class="card-body">
+              <h4 class="card-title" align="center">{{pokemon[2].nome}}</h4>
+              <p class="card-text "><strong>DOVE TROVARLO :</strong>{{pokemon[2].zona}}</p>
+          <p class="card-text"><strong>TIPOLOGIA :</strong>{{pokemon[2].tipo}}</p>
+          <p class="card-text"><strong>PRIMA ABILITÀ :</strong>{{pokemon[0].primaabilita}}</p>
+          <p class="card-text"><strong>ABILITÀ SPECIALE :</strong>{{pokemon[2].abilitaspeciale}}</p>
+          <p class="card-text"><strong>DEBOLEZZE :</strong>{{pokemon[2]. debolezze}}</p>
+            </div>
+        </div>
+        </div>
+        <br>
+    <br>
+      </ng-template>
+    </ng-template>
+  </ng-template>
+</ng-template>
