--- a/esercizio-7/src/app/card/card.component.css
+++ b/esercizio-7/src/app/card/card.component.css
@@ -2,13 +2,21 @@
     background-color: transparent ;
   }
   
-
+.tepig{
+    background-color: orangered;
+}
+.oshawott{
+    background-color: skyblue;
+}
+.snivy{
+    background-color: green;
+}
 
 .background0{
     background-image: url("../../assets/zona\ lavica.jpg");
         background-size: cover;
         background-position: center center;
-        height: 100vh;
+        height: 775px;
         width: 100vw;
         top: 0;
         left: 0;
@@ -20,7 +28,7 @@
     background-image: url("../../assets/zona\ glaciale.jpg");
         background-size: cover;
         background-position: center center;
-        height: 100vh;
+        height: 795px;
         width: 100vw;
         top: 0;
         left: 0;
@@ -32,7 +40,7 @@
     background-image: url("../../assets/foresta\ 2.jpg");
         background-size: cover;
         background-position: center center;
-        height: 100vh;
+        height: 790px;
         width: 100vw;
         top: 0;
         left: 0;
@@ -40,11 +48,8 @@
       
       
 }
+
 @font-face {
     font-family: POKEMON;
     src: url(../../assets/Pokemon\ Solid.ttf);
-}
-@font-face {
-    font-family: poke;
-    src: url(../../assets/Pokemon\ Hollow.ttf);
 }
