--- a/esercizio-7/src/app/card/card.component.html
+++ b/esercizio-7/src/app/card/card.component.html
@@ -4,17 +4,21 @@
 <h1 style="font-family: POKEMON ;" align="center" >Pokémon Nero e Bianco</h1>
 <img src="https://media.pokemoncentral.it/wiki/3/31/Pok%C3%A9mon_Serie_Nero_e_Bianco_logo.png" style="width: 100px; margin-left: auto; margin-right: auto;">
 <br>
-</div>4
+<h3 class="container" align="center">La città principale è Austropoli: questa è caratterizzata da molti edifici e grattacieli, tutti esplorabili dal giocatore. Al di fuori di Austropoli, Unima resta comunque prevalentemente industrializzata con la presenza di varie fabbriche e ferrovie in diversi settori.</h3>
+</div>
 <div *ngIf="!(pokemon[0].control || pokemon[1].control || pokemon[2].control); then thenBlock1; else elseBlock"></div>
 <ng-template #thenBlock1>
-  <h3 class="container" align="center">La città principale è Austropoli: questa è caratterizzata da molti edifici e grattacieli, tutti esplorabili dal giocatore. Al di fuori di Austropoli, Unima resta comunque prevalentemente industrializzata con la presenza di varie fabbriche e ferrovie in diversi settori.</h3>
+  <br>
+  <br>
   <div class="container">
     <div class="row">
       <div class="col-md-4" style="width:400px; margin-left: auto; margin-right: auto;"  *ngFor="let element of pokemon index as i">
       <div class="card mb-4" >
         <img class="card-img-top" src="{{element.immagine}}" alt="Card image">
         <div class="card-body">
+          <div class="card-body" style="background-color: orange; margin-right: 23%; margin-left: 20%;">
           <h4 class="card-title" style="font-family: POKEMON ;" align="center">{{element.nome}}</h4>
+          </div>
           <a href="#" class="btn" (click)="bottone(element)" style="width:200px; margin-left: 20%; margin-right: 20%; "[ngClass]="{'tepig' : pokemon[i].nome=='TEPIG','oshawott' : pokemon[i].nome=='OSHAWOTT','snivy' : pokemon[i].nome=='SNIVY'}">più informazioni</a>
         </div>
       </div>
